www/homepage: refactored #feedreader html/css a bit 	      added auto scrollbars to feedreader boxes 	      fixed widths on #feedreader and #wrap

--- a/www/trunk/homepage.css
+++ b/www/trunk/homepage.css
@@ -7,9 +7,14 @@ color:black;
 background:white;
 }
 
+h1, h3
+{
+margin: 0;
+}
+
 #wrap 
 {
-width:81em;
+width:79em;
 margin:0 auto;
 margin-top: 2em;
 background:white;
@@ -53,7 +58,7 @@ padding:0;
 #feedreader
 {
 height: 27.4em;
-width: 47.5em;
+width: 45.5em;
 margin: 1em auto;
 border: .1em groove navy;
 padding: 1em;
@@ -72,7 +77,7 @@ float:  right;
 background-color:#ffa20f;
 }
 
-#main
+#feedreader_feeds
 {
 float:left;
 padding:1em;
@@ -81,9 +86,10 @@ width:10em;
 border: .1em solid navy;
 margin-right: 1em;
 background-color: white;
+overflow: auto;
 }
 
-#sidebar
+#feedreader_stories
 {
 float:left;
 width:30em;
@@ -92,6 +98,7 @@ height:25em;
 border: .1em solid navy;
 border-style: groove;
 background-color: white;
+overflow: auto;
 }
 
 #footer
@@ -133,7 +140,7 @@ right:5px;
 li
 {
 list-style: none;
-margin: 0 auto 0 auto;
+margin: 0;
 padding: 0;
 text-align: left;
 }
